[TIMETABLE-CONF] Add ElasticSearch connection configuration

--- a/groups.yml
+++ b/groups.yml
@@ -10,3 +10,7 @@ eureka:
     fetch-registry: true
     instance:
       prefer-ip-address: true
+
+elasticsearch:
+  address: localhost
+  port: 9200
